--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,13 @@
     -->
     <title>Toronto blog</title>
   </head>
-  <body class="h-full text-white bg-gray-800">
+  <body
+    class="h-full text-white bg-gray-800"
+    style="background: 
+     linear-gradient(0deg, rgba(0, 0, 0, 0.8), rgb(25, 9, 37)), 
+     linear-gradient(90deg, rgb(169, 0, 255), rgb(0, 153, 255));
+  "
+  >
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root" class="h-full"></div>
     <!--
