--- a/public/index.html
+++ b/public/index.html
@@ -31,10 +31,11 @@
     <title>Toronto blog</title>
   </head>
   <body
-    class="h-full text-white bg-gray-800"
+    class="h-full text-white"
     style="background: 
      linear-gradient(0deg, rgba(0, 0, 0, 0.8), rgb(25, 9, 37)), 
      linear-gradient(90deg, rgb(169, 0, 255), rgb(0, 153, 255));
+     background-attachment: fixed;
   "
   >
     <noscript>You need to enable JavaScript to run this app.</noscript>
